# Raptor-service

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Database.md  Makefile  QODER_MCP_INTEGRATION.md  Readme.md  Runproject.md  body.json  check_fastmcp.py  docker-compose.dev.yml  docker-compose.yml  dockerfile  loadtest-docs.js  nginx.prod.conf  pnpm-lock.yaml  postman_collection.json  pyproject.toml  run_mcp_server.py  test_chat_apis.py  test_chat_simple.py  test_knowledge_base_api.py  test_mcp_imports.py
alembic/: env.py
app/: config.py  container.py  enhanced_container.py  env_config.py  langfuse_config.py  logging_config.py  logging_setup.py  main.py  monitor_loop.py  schemas.py
constants/: enum.py  prompt.py  query.py
controllers/: assistant_controller.py  chat_context_controller.py  chat_controller.py  chat_message_controller.py  dataset_controller.py  document_controller.py
db/: config.py  session.py
docs/: API_Testing_Guide.md  Debugging_Document_Upload.md  Document_Upload_Guide.md  MCP_CONTROL.md  api-knowledge-base-management.md  chat_context_implementation.md  chat_integration_flow.md  database-decoupling.md  frontend_chat_integration.md  migration-guide.md
dtos/: chat_dto.py
entities/: chunking.py  document.py
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  test-localStorage.html  vite.config.ts
interfaces_adaptor/: model_ref.py  ports.py
mcp/: TOOLS_API.md  __init__.py  client_example.py  example_mcp_server.py  example_usage.py  mcp_chat_adapter.py  mcp_client.py  mcp_service.py  raptor_mcp_server.py  server.py  sse_endpoint.py
mcp_local/: CONFIGURATION.md  README.md  __init__.py  config.py  example_usage.py  middleware.py  raptor_mcp_server.py  streamable_mcp_server.py
postman_collections/: Document_API_Tests.postman_collection.json
raptor/: raptor_core.py
repositories/: __init__.py  assistant_repo_pg.py  chat_context_repo.py  chat_repo.py  chunk_repo_pg.py  dataset_repo_pg.py  document_repo_pg.py  embedding_repo_pg.py  retrieval_repo.py  tree_repo_pg.py
routes/: assistant_routes.py  chat_context_routes.py  chat_message_routes.py  chat_routes.py  chat_session_routes.py  dataset_routes.py  document_routes.py  root.py
services/: __init__.py  answer_service.py  assistant_service.py  build_tree_service.py  chunk_refine_service.py  chunk_service.py  clusterer.py  dataset_service.py  document_service.py  embedder_adapter.py  embedding_query_service.py  embedding_service.py  exceptions.py  gmm.py  reducers.py  retrieval_service.py  summarizer.py
test_files/: sample_document.md
testing/: __init__.py  benchmark.py  comparison.py  load_test.py
tests/: test_answer_question.py  test_build_api.py  test_chat_context.py  test_list_datasets.py  test_mcp.py  test_mcp_flag.py  test_mcp_integration.py  test_rag_navigation.py  test_rag_node.py  test_rag_node_navigation.py  test_rag_path_to_root.py  test_rag_retrieve.py  (+6 more)
(+355 files in other folders)
