[project]
name = "raptor-service"
version = "0.1.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E,F: pyflakes/pycodestyle; I: import order; B: bugbear; UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "raptor"]
force-sort-within-sections = true


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true

description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.17.0",
    "fastapi[standard]>=0.116.1",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "llvmlite>=0.40",
    "numba>=0.57",
    "numpy<2.2",
    "openai>=1.99.9",
    "orjson>=3.11.2",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "sqlalchemy>=2.0.43",
    "umap-learn>=0.5.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
