[project]
name = "raptor-service"
version = "0.1.0"
description = "RAPTOR ingest & vector service"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi[standard]>=0.116.1",
  "sqlalchemy>=2,<3",
  "alembic>=1.16.4",
  "pgvector>=0.4.1",
  "psycopg[binary]>=3.2.9",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "httpx>=0.28.1",
  "openai>=1.99.9",
  "orjson>=3.11.2",
  "cohere>=5.17.0",
  "numpy<2.2",
  "scipy>=1.10,<1.14",
  "scikit-learn>=1.3,<1.5",
  "umap-learn>=0.5.6",
  "ulid>=1.1",
  "asyncpg>=0.30.0",
  "tiktoken>=0.11.0",
  "voyageai>=0.3.4",
  "google-genai>=1.31.0",
  "google-cloud-aiplatform>=1.110.0",
  "generativeai>=0.0.1",
  "google-generativeai>=0.8.5",
  "sentencepiece>=0.2.1",
  "langchain-openai>=0.3.31",
  "underthesea>=6.8.4",
  "mistune>=3.1.3",
  "markdown>=3.8.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
# chỉnh theo tên package thực tế của bạn (ví dụ infra, interfaces_adaptor, domain, usecases)
known-first-party = ["app", "repositories", "interfaces_adaptor", "services", "utils", "constants", "db", "uow", "routes", "controllers"]
force-sort-within-sections = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "commitizen>=4.8.3",
  "detect-secrets>=1.5.0",
  "faker>=37.5.3",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "mypy>=1.17.1",
  "numpy<2.2",
  "polyfactory>=2.22.1",
  "pre-commit>=4.3.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.8",
  "typer>=0.16.0",
]
